--- a/src/configs/.env
+++ b/src/configs/.env
@@ -1,7 +1,7 @@
 PORT = 3001
-NODE_ENV = development
+NODE_ENV = production
 
-DATABASE_URI =
+DATABASE_URI = mongodb+srv://vishvakalhara:H9RNngXbpOC632OO@cluster0.eg3nzcf.mongodb.net/express_mongoDB_ts?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET = 
 JWT_EXPIRES_IN=2d
