ready to prod 2

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "src/api/types/express.d.ts"
     ],
     "scripts": {
-        "start": "cd ./src && cd ./api && npx cross-env NODE_ENV=development nodemon index.ts",
+        "start": "cd ./src && cd ./api && npx cross-env NODE_ENV=production nodemon index.ts",
         "start:prod": "cd ./src && cd ./api && npx cross-env NODE_ENV=production nodemon index.ts",
         "debug": "cd ./src && cd ./api && ndb index.ts",
         "test": "jest --verbose --runInBand --detectOpenHandles",
