--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
     "version": 2,
-    "rewrites": [
+    "builds": [{ "src": "./src/api/index.ts", "use": "@vercel/node" }],
+    "routes": [
         {
-            "source": "/(.*)",
-            "destination": "/src/api"
+            "src": "/(.*)",
+            "destination": "/src/api/index.ts"
         }
     ]
 }
